<resources>
    <string name="app_name">Agora Vote Prototype 2</string>
    <string name="agora_vote">Agora Vote is a voting platform where \n users can create elections and invite \nfriends to cast their votes</string>
    <string name="it_supports">It supports a wide range of \n voting algorithms some of which are Majority, Egalitarian, Australian STV\n  just to name a few</string>
    <string name="fast_and_simple">Fast Simple and Securesign in and sign up process</string>
    <string name="create_election">Create Elections very smoothly in few steps and rock the world</string>
    <string name="invite_friends">What after creating an election ?</string>
    <string name="invite_your_friends">Invite your friends \n to vote</string>
    <string name="see_results_quickly">After completion of election. See Results very quickly</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="candidates">1. Mukul Kumar  \n2. Abandon  \n3. Thuvarakan  \n4. Alex Stark</string>
    <string name="technical_project_voting">\n Elections for college students \n to decide the best project out of \n the selected ones.</string>
    <string name="contact_us">Feel free to contact us on out gitter channels and work with us on gitlab</string>
    <string name="agora_vote_is">Agora vote is a voting \n platform where users can create elections and invite friends to cast their votes.</string>
    <string name="t_supports_a">It supports a wide range \n of voting algorithms some \n of which are Majority,\n Egalitarian, Australian \n STV just to name a few</string>
    <string name="n_nelection_to_select_the_next_prime_minister">\n\nElection to select the next Prime Minister</string>
    <string name="vote_now">Vote Now</string>
    <string name="active">Active</string>
    <string name="end_date">End Date: March 19, 2021</string>
    <string name="start_date">Start Date: March 19, 2019</string>
    <string name="my_invitations">My Invitations</string>
    <string name="active_elections">Active Elections</string>
    <string name="candidates1">Candidates</string>
    <string name="create_new_election">Create New Election</string>
    <string name="technical">Technical Project Voting</string>
    <string name="signup">Signup</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="sign_in">Sign in</string>
    <string name="agora_vote_1">Agora Vote</string>
    <string name="election_name">Election Name</string>
    <string name="election_description">Election Description</string>
    <string name="step_1">Step 1</string>
    <string name="next_step">Next Step</string>
    <string name="step_2">Step 2</string>
    <string name="end_date_input">End Date</string>
    <string name="start_date_input">Start Date</string>
    <string name="enter_candidate_s_name">Enter Candidate\'s Name</string>
    <string name="step_3">Step 3</string>
    <string name="candidates_list">Candidates List</string>
    <string name="finish">Finish</string>
    <string name="everyone_with_the_access_to_election">Everyone with the access to election</string>
    <string name="only_me">Only Me</string>
    <string name="who_can_see">Who Can See The List Of Voters ?</string>
    <string name="ballots_are">Ballots are visible to everyone with access</string>
    <string name="ballots_are_only_visible_to_me">Ballots are only visible to me</string>
    <string name="ballots_are_completely_secret_and_never_shown_to_anyone">Ballots are completely secret and never shown to anyone</string>
    <string name="how_secret_are_ballots">How Secret Are Ballots ?</string>
    <string name="get_real_time_results">Get Real Time Results ?</string>
    <string name="invite_voters">Invite Voters ?</string>
    <string name="final_step">Final Step</string>
    <string name="see_results">See Results</string>
    <string name="finished">Finished</string>
    <string name="finished_elections">Finished Elections</string>
    <string name="sign_up_sign_in">Sign up/Sign in</string>
    <string name="proceed">Proceed</string>
    <string name="add_to_the_list">Add To The List</string>
    <string name="invite_voters2">Invite Voters</string>
    <string name="voter_s_email">Voter\'s Email</string>
    <string name="voters_name">Voters Name</string>
    <string name="voter_4_email_4">Voter 4 (Email 4)</string>
    <string name="voter_3_email_3">Voter 3 (Email 3)</string>
    <string name="voter_2_email_2">Voter 2 (Email 2)</string>
    <string name="voter_1_email_1">Voter 1 (Email 1)</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? Sign In</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="swipe_to_move_positions">Swipe To Move Positions</string>
    <string name="_4_gunshot">4. Gunshot</string>
    <string name="_3_alex_stark">3. Alex Stark</string>
    <string name="_2_catherine">2. Catherine</string>
    <string name="_1_natasha">1. Natasha</string>
    <string name="n_no_el">No Election Pending   Create A New One</string>
    <string name="pending_elections">Pending Elections</string>
    <string name="or">OR</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="made_with">Made With</string>
    <string name="by_aossie">By AOSSIE</string>
    <string name="total_elections">Total Elections</string>
    <string name="winner">(Winner!!!)</string>
    <string name="cast_your_vote">Cast Your Vote</string>
    <string name="natasha">Natasha</string>
    <string name="catherine">Catherine</string>
    <string name="alex_stark">Alex Stark</string>
    <string name="gunshot">Gunshot</string>
    <string name="preview">Preview</string>
    <string name="_1_thuvarakan_tharmarajasingam">1. Thuvarakan Tharmarajasingam</string>
    <string name="_2_donald_trump">2. Donald Trump</string>
    <string name="_3_abanda_ludovic">3. Abanda Ludovic</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="open_up_dashboard_and_n_have_fun">Open up Dashboard and   Have fun!!!</string>
    <string name="stuck_into_a_problem">Stuck into a problem?</string>
    <string name="hello_n_thuvarakan_ntharmarajasingam">Hello!!!   \n Thuvarakan  \n Tharmarajasingam</string>
    <string name="about_agora">About Agora</string>
    <string name="contact_us1">Contact Us</string>
    <string name="aossie_gitter">AOSSIE Gitter</string>
    <string name="aossie_gitlab">AOSSIE Gitlab</string>
    <string name="next_prime_minister">Next Prime Minister</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="thuvarakan_n_tharmarajasingam">Thuvarakan   Tharmarajasingam</string>
    <string name="email_thuva4_dev_gmail_com_n_verified">Email: thuva4.dev@gmail.com   (verified)</string>
    <string name="username_thuva4">Username : Thuva4</string>
    <string name="thuvarakan_tharmarajasingam">Thuvarakan Tharmarajasingam</string>
    <string name="thuva4dev_gmail_com">thuva4dev@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="help">Help</string>
    <string name="communicate">Communicate</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="share_with_others">Share with others</string>
</resources>
